# vigia

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
charts/lareira-vigia/: Chart.yaml  values.yaml
charts/lareira-vigia/charts/: pleme-lib-0.13.1.tgz
charts/lareira-vigia/templates/: _helpers.tpl  deployment.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: auth.rs  cache.rs  config.rs  hostname.rs  jwks.rs  lib.rs  main.rs
